# dev-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
Formula/: dev-cli.rb
bucket/: dev-cli.json
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  tui.rs
crates/cli/src/ai/: claude.rs  mod.rs  render.rs
crates/cli/src/logs/: containers.rs  dashboard.rs  mod.rs  remote.rs  render.rs  stats.rs
crates/cli/src/screens/: app_types.rs  containers.rs  dashboard.rs  levels.rs  lines.rs  loguru_stats.rs  mod.rs
crates/nucleo/: Cargo.toml
crates/nucleo/src/: coletor.rs  config.rs  core.rs  db.rs  executor.rs  lib.rs  metricas.rs
crates/servidor/: Cargo.toml
crates/servidor/src/: api.rs  main.rs
deploy/: config.exemplo.toml  dev-server.service  instalar.sh
docs/: dev-cli-mentorship.md
docs/superpowers/plans/: 2026-07-01-ai-stats-plan.md  2026-07-02-ai-stats-combinado.md  2026-07-08-fase1-workspace-nucleo-dashboard.md
docs/superpowers/specs/: 2026-07-01-ai-stats-design.md  2026-07-02-ai-stats-combinado-design.md
src/: cli.rs  help.rs  logs.rs  main.rs  tui.rs
src/ai/: cambio.rs  claude.rs  mod.rs  opencode.rs  precos.rs  render.rs  stats.rs
src/logs/: containers.rs  core.rs  db.rs  mod.rs  remote.rs  render.rs  stats.rs
src/screens/: app_types.rs  lines.rs  loguru_stats.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  formato.test.ts  formato.ts  index.css  setupTests.ts  tipos.ts
web/src/componentes/: Cabecalho.tsx  ListaAlertas.tsx  PainelContainer.test.tsx  PainelContainer.tsx  TabelaContainers.test.tsx  TabelaContainers.tsx
