[package]
name = "dev-cli"
version = "0.1.1"
edition = "2024"
description = "Canivete suíço de linha de comando para tarefas de desenvolvimento"
license = "MIT"
repository = "https://github.com/jarede/dev-cli"
readme = "README.md"

[dependencies]
chrono = "0.4"
clap = { version = "4.6.1", features = ["derive"] }
owo-colors = "4"
reqwest = { version = "0.13", features = ["blocking", "json"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
ratatui = "0.29"
crossterm = "0.28"
