[package]
name = "dev-cli"
description = "Canivete suíço de linha de comando para tarefas de desenvolvimento"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# O binário se chama dev-cli e o entry point segue em src/main.rs.
[[bin]]
name = "dev-cli"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
nucleo.workspace = true
owo-colors.workspace = true
ratatui.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
