[package]
name = "nucleo"
description = "Núcleo do dev-cli: parse de logs, métricas, coleta docker e SQLite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dirs.workspace = true
dotenvy.workspace = true
rusqlite.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
serde_json.workspace = true
