[package]
name = "servidor"
description = "Servidor HTTP do dev-cli: coleta contínua de logs + API JSON"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# O crate se chama `servidor` (pt-br, convenção do projeto), mas o binário
# instalado na VM se chama `dev-server` — nome público, como o `dev-cli`.
[[bin]]
name = "dev-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
clap.workspace = true
nucleo.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
